src/rows2graph/validators/_grammar/generated/aql/AQLParser.py
from __future__ import annotations
# Generated from AQLParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AQLParser ( Parser ):

    grammarFileName = "AQLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'FOR'", "'LET'", "'FILTER'", "'RETURN'", 
                     "'COLLECT'", "'SORT'", "'LIMIT'", "'WINDOW'", "'DISTINCT'", 
                     "'AGGREGATE'", "'ASC'", "'DESC'", "<INVALID>", "'IN'", 
                     "'INTO'", "'WITH'", "'REMOVE'", "'INSERT'", "'UPDATE'", 
                     "'REPLACE'", "'UPSERT'", "'GRAPH'", "'SHORTEST_PATH'", 
                     "'K_SHORTEST_PATHS'", "'ALL_SHORTEST_PATHS'", "'K_PATHS'", 
                     "'OUTBOUND'", "'INBOUND'", "'ANY'", "'ALL'", "'NONE'", 
                     "'LIKE'", "<INVALID>", "<INVALID>", "<INVALID>", "'NULL'", 
                     "'TRUE'", "'FALSE'", "'=~'", "'!~'", "'=='", "'!='", 
                     "'>='", "'>'", "'<='", "'<'", "'='", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'?'", "'::'", "':'", "'..'", 
                     "','", "'('", "')'", "'{'", "'}'", "'['", "']'", "'.'" ]

    symbolicNames = [ "<INVALID>", "T_FOR", "T_LET", "T_FILTER", "T_RETURN", 
                      "T_COLLECT", "T_SORT", "T_LIMIT", "T_WINDOW", "T_DISTINCT", 
                      "T_AGGREGATE", "T_ASC", "T_DESC", "T_AT_LEAST", "T_IN", 
                      "T_INTO", "T_WITH", "T_REMOVE", "T_INSERT", "T_UPDATE", 
                      "T_REPLACE", "T_UPSERT", "T_GRAPH", "T_SHORTEST_PATH", 
                      "T_K_SHORTEST_PATHS", "T_ALL_SHORTEST_PATHS", "T_K_PATHS", 
                      "T_OUTBOUND", "T_INBOUND", "T_ANY", "T_ALL", "T_NONE", 
                      "T_LIKE", "T_NOT", "T_AND", "T_OR", "T_NULL", "T_TRUE", 
                      "T_FALSE", "T_REGEX_MATCH", "T_REGEX_NON_MATCH", "T_EQ", 
                      "T_NE", "T_GE", "T_GT", "T_LE", "T_LT", "T_ASSIGN", 
                      "T_PLUS", "T_MINUS", "T_TIMES", "T_DIV", "T_MOD", 
                      "T_QUESTION", "T_SCOPE", "T_COLON", "T_RANGE", "T_COMMA", 
                      "T_OPEN", "T_CLOSE", "T_OBJECT_OPEN", "T_OBJECT_CLOSE", 
                      "T_ARRAY_OPEN", "T_ARRAY_CLOSE", "DOT", "T_INTEGER", 
                      "T_DOUBLE", "T_QUOTED_STRING", "T_STRING", "T_DATA_SOURCE_PARAMETER", 
                      "T_PARAMETER", "LINE_COMMENT", "BLOCK_COMMENT", "WS" ]

    RULE_queryStart = 0
    RULE_optionalWith = 1
    RULE_withCollectionList = 2
    RULE_withCollection = 3
    RULE_query = 4
    RULE_finalStatement = 5
    RULE_statementBlockStatement = 6
    RULE_forStatement = 7
    RULE_forOutputVariables = 8
    RULE_forSource = 9
    RULE_forOptions = 10
    RULE_traversalGraphInfo = 11
    RULE_shortestPathGraphInfo = 12
    RULE_kShortestPathsGraphInfo = 13
    RULE_kPathsGraphInfo = 14
    RULE_allShortestPathsGraphInfo = 15
    RULE_pruneAndOptions = 16
    RULE_optionalPruneVariable = 17
    RULE_graphSubject = 18
    RULE_graphCollectionList = 19
    RULE_graphCollection = 20
    RULE_graphDirection = 21
    RULE_graphDirectionSteps = 22
    RULE_letStatement = 23
    RULE_letList = 24
    RULE_letElement = 25
    RULE_filterStatement = 26
    RULE_collectStatement = 27
    RULE_countInto = 28
    RULE_collectList = 29
    RULE_collectElement = 30
    RULE_collectOptionalInto = 31
    RULE_keep = 32
    RULE_variableList = 33
    RULE_aggregate = 34
    RULE_aggregateList = 35
    RULE_aggregateElement = 36
    RULE_aggregateFunctionCall = 37
    RULE_sortStatement = 38
    RULE_sortList = 39
    RULE_sortElement = 40
    RULE_sortDirection = 41
    RULE_limitStatement = 42
    RULE_windowStatement = 43
    RULE_returnStatement = 44
    RULE_removeStatement = 45
    RULE_insertStatement = 46
    RULE_updateStatement = 47
    RULE_updateParameters = 48
    RULE_replaceStatement = 49
    RULE_replaceParameters = 50
    RULE_upsertStatement = 51
    RULE_updateOrReplace = 52
    RULE_inOrIntoCollection = 53
    RULE_inOrIntoCollectionName = 54
    RULE_optionsClause = 55
    RULE_expression = 56
    RULE_quantifier = 57
    RULE_reference = 58
    RULE_functionCall = 59
    RULE_functionName = 60
    RULE_optionalFunctionCallArguments = 61
    RULE_functionArgumentsList = 62
    RULE_expressionOrQuery = 63
    RULE_arrayFilterOperator = 64
    RULE_arrayMapOperator = 65
    RULE_optionalArrayFilter = 66
    RULE_optionalArrayLimit = 67
    RULE_optionalArrayReturn = 68
    RULE_compoundValue = 69
    RULE_array = 70
    RULE_optionalArrayElements = 71
    RULE_arrayElementsList = 72
    RULE_arrayElement = 73
    RULE_object = 74
    RULE_optionalObjectElements = 75
    RULE_objectElementsList = 76
    RULE_objectElement = 77
    RULE_objectElementName = 78
    RULE_simpleValue = 79
    RULE_valueLiteral = 80
    RULE_numericValue = 81
    RULE_bindParameter = 82
    RULE_bindParameterDatasourceExpected = 83
    RULE_variableName = 84

    ruleNames =  [ "queryStart", "optionalWith", "withCollectionList", "withCollection", 
                   "query", "finalStatement", "statementBlockStatement", 
                   "forStatement", "forOutputVariables", "forSource", "forOptions", 
                   "traversalGraphInfo", "shortestPathGraphInfo", "kShortestPathsGraphInfo", 
                   "kPathsGraphInfo", "allShortestPathsGraphInfo", "pruneAndOptions", 
                   "optionalPruneVariable", "graphSubject", "graphCollectionList", 
                   "graphCollection", "graphDirection", "graphDirectionSteps", 
                   "letStatement", "letList", "letElement", "filterStatement", 
                   "collectStatement", "countInto", "collectList", "collectElement", 
                   "collectOptionalInto", "keep", "variableList", "aggregate", 
                   "aggregateList", "aggregateElement", "aggregateFunctionCall", 
                   "sortStatement", "sortList", "sortElement", "sortDirection", 
                   "limitStatement", "windowStatement", "returnStatement", 
                   "removeStatement", "insertStatement", "updateStatement", 
                   "updateParameters", "replaceStatement", "replaceParameters", 
                   "upsertStatement", "updateOrReplace", "inOrIntoCollection", 
                   "inOrIntoCollectionName", "optionsClause", "expression", 
                   "quantifier", "reference", "functionCall", "functionName", 
                   "optionalFunctionCallArguments", "functionArgumentsList", 
                   "expressionOrQuery", "arrayFilterOperator", "arrayMapOperator", 
                   "optionalArrayFilter", "optionalArrayLimit", "optionalArrayReturn", 
                   "compoundValue", "array", "optionalArrayElements", "arrayElementsList", 
                   "arrayElement", "object", "optionalObjectElements", "objectElementsList", 
                   "objectElement", "objectElementName", "simpleValue", 
                   "valueLiteral", "numericValue", "bindParameter", "bindParameterDatasourceExpected", 
                   "variableName" ]

    EOF = Token.EOF
    T_FOR=1
    T_LET=2
    T_FILTER=3
    T_RETURN=4
    T_COLLECT=5
    T_SORT=6
    T_LIMIT=7
    T_WINDOW=8
    T_DISTINCT=9
    T_AGGREGATE=10
    T_ASC=11
    T_DESC=12
    T_AT_LEAST=13
    T_IN=14
    T_INTO=15
    T_WITH=16
    T_REMOVE=17
    T_INSERT=18
    T_UPDATE=19
    T_REPLACE=20
    T_UPSERT=21
    T_GRAPH=22
    T_SHORTEST_PATH=23
    T_K_SHORTEST_PATHS=24
    T_ALL_SHORTEST_PATHS=25
    T_K_PATHS=26
    T_OUTBOUND=27
    T_INBOUND=28
    T_ANY=29
    T_ALL=30
    T_NONE=31
    T_LIKE=32
    T_NOT=33
    T_AND=34
    T_OR=35
    T_NULL=36
    T_TRUE=37
    T_FALSE=38
    T_REGEX_MATCH=39
    T_REGEX_NON_MATCH=40
    T_EQ=41
    T_NE=42
    T_GE=43
    T_GT=44
    T_LE=45
    T_LT=46
    T_ASSIGN=47
    T_PLUS=48
    T_MINUS=49
    T_TIMES=50
    T_DIV=51
    T_MOD=52
    T_QUESTION=53
    T_SCOPE=54
    T_COLON=55
    T_RANGE=56
    T_COMMA=57
    T_OPEN=58
    T_CLOSE=59
    T_OBJECT_OPEN=60
    T_OBJECT_CLOSE=61
    T_ARRAY_OPEN=62
    T_ARRAY_CLOSE=63
    DOT=64
    T_INTEGER=65
    T_DOUBLE=66
    T_QUOTED_STRING=67
    T_STRING=68
    T_DATA_SOURCE_PARAMETER=69
    T_PARAMETER=70
    LINE_COMMENT=71
    BLOCK_COMMENT=72
    WS=73

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryStartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def optionalWith(self):
            return self.getTypedRuleContext(AQLParser.OptionalWithContext,0)


        def query(self):
            return self.getTypedRuleContext(AQLParser.QueryContext,0)


        def EOF(self):
            return self.getToken(AQLParser.EOF, 0)

        def getRuleIndex(self):
            return AQLParser.RULE_queryStart




    def queryStart(self):

        localctx = AQLParser.QueryStartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_queryStart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.optionalWith()
            self.state = 171
            self.query()
            self.state = 172
            self.match(AQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionalWithContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_WITH(self):
            return self.getToken(AQLParser.T_WITH, 0)

        def withCollectionList(self):
            return self.getTypedRuleContext(AQLParser.WithCollectionListContext,0)


        def getRuleIndex(self):
            return AQLParser.RULE_optionalWith




    def optionalWith(self):

        localctx = AQLParser.OptionalWithContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_optionalWith)
        try:
            self.state = 177
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4, 5, 6, 7, 8, 17, 18, 19, 20, 21]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.match(AQLParser.T_WITH)
                self.state = 176
                self.withCollectionList()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WithCollectionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def withCollection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AQLParser.WithCollectionContext)
            else:
                return self.getTypedRuleContext(AQLParser.WithCollectionContext,i)


        def T_COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AQLParser.T_COMMA)
            else:
                return self.getToken(AQLParser.T_COMMA, i)

        def getRuleIndex(self):
            return AQLParser.RULE_withCollectionList




    def withCollectionList(self):

        localctx = AQLParser.WithCollectionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_withCollectionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.withCollection()
            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 57)) & ~0x3f) == 0 and ((1 << (_la - 57)) & 14337) != 0):
                self.state = 181
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==57:
                    self.state = 180
                    self.match(AQLParser.T_COMMA)


                self.state = 183
                self.withCollection()
                self.state = 188
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WithCollectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_STRING(self):
            return self.getToken(AQLParser.T_STRING, 0)

        def bindParameterDatasourceExpected(self):
            return self.getTypedRuleContext(AQLParser.BindParameterDatasourceExpectedContext,0)


        def getRuleIndex(self):
            return AQLParser.RULE_withCollection




    def withCollection(self):

        localctx = AQLParser.WithCollectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_withCollection)
        try:
            self.state = 191
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [68]:
                self.enterOuterAlt(localctx, 1)
                self.state = 189
                self.match(AQLParser.T_STRING)
                pass
            elif token in [69, 70]:
                self.enterOuterAlt(localctx, 2)
                self.state = 190
                self.bindParameterDatasourceExpected()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def finalStatement(self):
            return self.getTypedRuleContext(AQLParser.FinalStatementContext,0)


        def statementBlockStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AQLParser.StatementBlockStatementContext)
            else:
                return self.getTypedRuleContext(AQLParser.StatementBlockStatementContext,i)


        def getRuleIndex(self):
            return AQLParser.RULE_query




    def query(self):

        localctx = AQLParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 193
                    self.statementBlockStatement() 
                self.state = 198
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 199
            self.finalStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FinalStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnStatement(self):
            return self.getTypedRuleContext(AQLParser.ReturnStatementContext,0)


        def removeStatement(self):
            return self.getTypedRuleContext(AQLParser.RemoveStatementContext,0)


        def insertStatement(self):
            return self.getTypedRuleContext(AQLParser.InsertStatementContext,0)


        def updateStatement(self):
            return self.getTypedRuleContext(AQLParser.UpdateStatementContext,0)


        def replaceStatement(self):
            return self.getTypedRuleContext(AQLParser.ReplaceStatementContext,0)


        def upsertStatement(self):
            return self.getTypedRuleContext(AQLParser.UpsertStatementContext,0)


        def getRuleIndex(self):
            return AQLParser.RULE_finalStatement




    def finalStatement(self):

        localctx = AQLParser.FinalStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_finalStatement)
        try:
            self.state = 207
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 201
                self.returnStatement()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 202
                self.removeStatement()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 203
                self.insertStatement()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 4)
                self.state = 204
                self.updateStatement()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 5)
                self.state = 205
                self.replaceStatement()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 6)
                self.state = 206
                self.upsertStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementBlockStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forStatement(self):
            return self.getTypedRuleContext(AQLParser.ForStatementContext,0)


        def letStatement(self):
            return self.getTypedRuleContext(AQLParser.LetStatementContext,0)


        def filterStatement(self):
            return self.getTypedRuleContext(AQLParser.FilterStatementContext,0)


        def collectStatement(self):
            return self.getTypedRuleContext(AQLParser.CollectStatementContext,0)


        def sortStatement(self):
            return self.getTypedRuleContext(AQLParser.SortStatementContext,0)


        def limitStatement(self):
            return self.getTypedRuleContext(AQLParser.LimitStatementContext,0)


        def windowStatement(self):
            return self.getTypedRuleContext(AQLParser.WindowStatementContext,0)


        def removeStatement(self):
            return self.getTypedRuleContext(AQLParser.RemoveStatementContext,0)


        def insertStatement(self):
            return self.getTypedRuleContext(AQLParser.InsertStatementContext,0)


        def updateStatement(self):
            return self.getTypedRuleContext(AQLParser.UpdateStatementContext,0)


        def replaceStatement(self):
            return self.getTypedRuleContext(AQLParser.ReplaceStatementContext,0)


        def upsertStatement(self):
            return self.getTypedRuleContext(AQLParser.UpsertStatementContext,0)


        def getRuleIndex(self):
            return AQLParser.RULE_statementBlockStatement




    def statementBlockStatement(self):
